@@ -8,7 +8,7 @@ _Plowshare_ is a command-line downloader and uploader for some of the most popul
 || [http://www.4shared.com 4Shared] || anonymous || -|| -|| yes ||
 || [http://www.badongo.com Badongo] || anonymous || -|| -|| -||
 || [http://www.data.hu Data.hu] || anonymous || -|| -|| -||
-|| [http://www.depositfiles.com DepositFiles] || anonymous || -|| -|| -||
+|| [http://www.depositfiles.com DepositFiles] || anonymous || -|| -|| yes ||
 || [http://www.divshare.com divShare] || anonymous || -|| -|| -||
 || [http://dl.free.fr dl.free.fr] || anonymous || -|| -|| -||
 || [http://www.filefactory.com FileFactory] || anonymous || -|| -|| yes ||
