@@ -5,6 +5,8 @@ plowshare (0.9.4svn) stable; urgency=low
   * [filefactory] Add list function
   * [mediafire] Add upload function
   * [4shared] Add list function
+  * [depositfiles] Add list function
+  * [download] Add -v4 verbosity message level (very noisy, for bug report)
 
  -- Arnau Sanchez <tokland@gmail.com>  Mon, 07 Jun 2010 16:22:10 +0200
 
